# d3term

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
config/: config.example.toml
docs/: design.md  requirements.md
plans/: d3term-v1-execplan.md
src/: config-client.test.ts  config-client.ts  main.ts  styles.css  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  main.rs  pty.rs  state.rs
