[package]
name = "d3term"
version = "0.1.0"
description = "Lightweight terminal emulator with Tauri and xterm.js"
authors = ["note066"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "6"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
toml = "0.8"
